# sm-utility

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  generate_release
cli/: CMakeLists.txt  test.cpp  utility.cpp
core/client/: CMakeLists.txt
core/client/inc/: sm_client.hpp  sm_error.hpp  sm_file.hpp  sm_message.hpp
core/client/src/: sm_client.cpp  sm_error.cpp  sm_file.cpp  sm_message.cpp
core/common/: sm_common.hpp  sm_modbus.hpp
core/server/: CMakeLists.txt
core/server/inc/: sm_com.hpp  sm_node.hpp  sm_resources.hpp  sm_server.hpp  sm_timer.hpp
core/server/src/: sm_com.cpp  sm_resources.cpp  sm_server.cpp
inc/: sm_client.hpp  sm_modbus.hpp  sm_utility.hpp
lib/: CMakeLists.txt
lib/inc/: sm_client.hpp  sm_error.hpp  sm_file.hpp  sm_modbus.hpp
lib/src/: sm_client.cpp  sm_error.cpp  sm_file.cpp  sm_modbus.cpp
src/: sm_client.cpp  sm_modbus.cpp
tests/: CMakeLists.txt  test.cpp
utility/cli/: CMakeLists.txt  utility.cpp
